[tool.poetry]
name = "airt_utils"
version = "0.1.7"
description = "Utilities for experiment-centric AI Red Teaming workflows"
authors = ["Joe Lucas <joe@joetl.com>"]
license = "MIT"
readme = "README.md"
keywords = ["mlflow", "logging", "ai-red-team"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "airt_utils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.15.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
twine = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
